src/styles/piano.css
table, th, td {
  border: 1px solid black;
}
body {
    background-image: url('/src/assets/background/stars_3.jpg');
    background-color: black;
}
.fa-square:before{
    margin: 5px;
}
.fa-sliders-h:before {
  margin-left: 5px;
  }

#intro{
    size: 20px;
}
.volume-slider{
  -webkit-appearance: none;
  width: 70%;
  height: 7.5px;
  background: #000;
  outline: none;
  border: 5px solid lawngreen;
  border-radius: 8px;
  margin-right: 10px;
}

.fas.fa-volume-up{
    margin: 2px;
    color: lawngreen;
    size: 10px;
}
input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  border: 1px solid #000000;
  height: 20px;
  width: 10px;
  border-radius: 3px;
  background: #ffffff;
  cursor: pointer;
  margin-top: -12px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
}




#background{
    background-color: black;
    background-image: url('/src/assets/background/stars_1.jpg');
    height: 800px;
    margin: 30px;

}

.instructions-info{
    display: flex;
    justify-content: center;
    font-family: 'Zen Tokyo Zoo', cursive;
    
}

#instructions-icon{
    margin-top: -5px;
    position: absolute;
    margin-left: 142px;
    cursor: pointer;
    
}
#instructions-modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 2; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(155, 0, 0); /* Fallback color */
  background-color: rgba(255, 255, 255, 0.4);
}
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 50%; /* Could be more or less, depending on screen size */
}

#title{
    display: flex;
    justify-content: center;
    font-family: 'Zen Tokyo Zoo', cursive;
    font-size: 70px;
    margin: 0px;
    color: rgb(218, 216, 99);
    /* text-shadow: 2px 2px 3px rgb(0, 0, 0), 1px 1px 5px rgb(255, 0, 234) ; */
    text-shadow:
    0 0 7px #fff,
    0 0 10px #fff,
    0 0 21px #fff,
    0 0 42px rgb(218, 216, 99),
    0 0 82px rgb(218, 216, 99),
    0 0 92px rgb(218, 216, 99),
    0 0 102px rgb(218, 216, 99),
    0 0 151px rgb(218, 216, 99);
}
.keyboard{
    height: 401px;
    width: 900px;
    padding: 1px;
    margin-left: 180px;
    position: relative;
    box-sizing: border-box;
    margin-top: -10px;
}
/****************** Lower Deck *****************/

/* PIANO */
.lower-container{

    position: relative;
    height: 201px;
    width: 901px;
    /* border: 0.5px solid black; */
    margin-top: 148px;
    margin-left: -51px;
    box-sizing: border-box;
    border-radius: 0.5em;
    
}
/* KEYS */
.white{
    position: relative;
    border: 0.5px solid black;
    width: 57.91px;
    height: 199px;
    white-space: nowrap;
    float: left;
    background-color: grey;
    border-radius: 0.5em;
    margin-top: 2px;
}

.black{
    width: 29px;
    height: 101px;
    position: absolute;
    z-index: 1;
    border: solid 1px #dad863;
    background-color: #3d004e;
    margin-left: 44.9px;
    
}

/* ***************** Upper Deck *************** */

/* FILTERS & DISPLAY */

.upper-container{
    background-color: #dad863;
    height: 201px;
    width: 901px;
    box-sizing: border-box;
    border-radius: 0.5em;
    position: absolute;
    border-top-color: darkred;
    border: rgb(255, 102, 0) solid 4px;
    margin-right: -40px;
    margin-top: -50px;
    margin-left: -52px;
    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #dad863, 0 0 82px #dad863, 0 0 92px #dad863;
}

/* Knobs */
.right{
    position: relative;
    width: 301px;
    height: 201px;
    margin-left: 598px;
    
}

.left{
    margin-top: -201px;
    position: relative;
    width: 301px;
    height: 201px;
    /* margin-bottom: -400px; */
}

.middle{
    position: absolute;
    width: 301px;
    height: 200px;
    margin-left: 298px;
    margin-top: -201px;
    justify-content: space-between;
}
.upper-pad{
    margin-top: 10px;
    margin-left: 25px;
    margin-right: 25px;
    display: flex;
    justify-content: space-between;
    cursor: pointer;
    /* margin: auto; */
}
.lower-pad{
    margin-top: 15px;
    margin-left: 25px;
    margin-right: 25px;
    display: flex;
    justify-content: space-between;
    cursor: pointer;
    /* margin: auto; */
}

.social{
    display: flex;
    margin: 5px;
    flex-direction: column;
}

/* Font Awesome Icons */

.fa-square.fa-5x{
     text-shadow: 0 0 15px #ff5e00fd;
}

#github{
    text-shadow:
    0 0 7px #fff,
    0 0 10px #fff,
    0 0 21px #fff,
    0 0 42px rgb(218, 216, 99),
    0 0 82px rgb(218, 216, 99),
    0 0 92px rgb(218, 216, 99);
    margin: 20px;

}

#twitter{
    text-shadow:
    0 0 7px #fff,
    0 0 10px #fff,
    0 0 21px #fff,
    0 0 42px rgb(218, 216, 99),
    0 0 82px rgb(218, 216, 99),
    0 0 92px rgb(218, 216, 99);
    margin: 20px;

}

#linkedin{
    text-shadow:
    0 0 7px #fff,
    0 0 10px #fff,
    0 0 21px #fff,
    0 0 42px rgb(218, 216, 99),
    0 0 82px rgb(218, 216, 99),
    0 0 92px rgb(218, 216, 99);
    margin: 20px;

}
#knob-1{
    margin-top: 10px;
    position: absolute;
}
#volume{
    margin-top: -151px;
    margin-right: 136px;
    float: right;
}

.display{
    margin-left: 14px;
    margin-top: 14px;
    border: solid 3px;
    margin-right: 14px;
}

